Implemented custom grid sizes. Basic css. Initial requirements complete

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <h1>Odin Etch-a-Sketch</h1>
+    <button id="createCustomGrid">Create Custom Grid</button>
     <div id="gridContainer"></div>
   </body>
 </html>
